# nosql-db-usage

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  pyproject.toml
Chat History/0 Redis/: .env  docker-compose.yml  pyproject.toml
Chat History/0 Redis/envs/: .env.dev  .env.prod  .env.stage
Chat History/0 Redis/scripts/: chat_history.py
Chat History/0 Redis/src/chatbot/: chatbot_repository.py
Chat History/0 Redis/src/config/: config.py  config.yaml
Chat History/0 Redis/src/infra/: document_store.py  initializations.py
Chat History/0 Redis/src/intent/: intent_entities.py
Chat History/0 Redis/src/utils/: utils.py
Vector & Document Store/2 Azure AI Search & CosmosDB by MongoDB/: README.md
notebooks/: chat_history.py
src/chatbot/: chatbot_entities.py
src/config/: __init__.py  config.py  config.yaml
src/dbs/: redisdb.py
src/infra/: document_store.py  initializations.py
src/infra/dbs/: mongodb.py
src/logging/: logger.py
src/utils/: encryption.py  utils.py
