[tool.poetry]
name = "documents indexing"
version = "0.1.0"
description = ""
authors = ["garashov <garashovelnur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
python-dotenv = "^1.0.1"
envyaml = "^1.10.211231"
cryptography = "^43.0.3"
langchain = "0.2.3"
langchain-community = "0.2.4"
redis = "^5.2.0"
pymongo = "^4.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
